fix z-index and change to 7-tab navbar

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -8,6 +8,7 @@ html {
 
 body {
   width: 100%;
+  height: 100%;
   display: table-cell;
   font-family: 'Noto Sans TC', sans-serif;
 }
@@ -29,6 +30,7 @@ html, body {
 .page--light {
   height: 100%;
   position: relative;
+  z-index: 9;
 }
 .page--light::after {
   content: "";
@@ -37,11 +39,10 @@ html, body {
   left: 0px;
   width: 100%;
   height: 100%;
-  z-index: 99;
+  z-index: -9;
   background-image: url('../img/handshake.png');
   background-size: cover;
-  background-attachment: scroll;
-  opacity: 0.2;
+  opacity: 0.5;
 }
 
 .page__title {
