--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -9,6 +9,7 @@ $off-yellow: #f0f0b4;
 $gold-yellow: #95972c;
 $light-brown: rgba($color: (#6d4c41), $alpha: 0.8);
 $lighter-brown: rgba($color: (#bcaaa4), $alpha: 1);
+$header-orange: rgba($color: (#ffab00), $alpha: 0.2);
 
 // Spacing
 $s-size: 1.2rem;
