--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -1,6 +1,6 @@
 .homepage {
   height: 100%;
-  background-image: url('../img/handshake2.png');
+  background-image: url('../img/handshake.png');
   background-size: cover;
 }
 
